[workspace]
members = ["db", "api", "migrations"]

[workspace.dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["native-tls"] }
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "serde_json"] }
sea-orm-migration = "1.1.2"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-utils = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
